# bangumi-userscripts

./: .gitignore  README.md  com.willian-zhang.color.js  com.willian-zhang.highlight-eps.js  moe.bangumi.hightlight-episode.js  moe.willian.wasm-speed.js  org.dmhy.hightlight-episode.js
wasm-speed/: Cargo.toml
wasm-speed/pkg/: package.json  wasm_speed.d.ts  wasm_speed.js  wasm_speed_bg.wasm
