[package]
name = "wasm-speed"
version = "0.1.0"
authors = ["Willian Zhang <willian@willian-zhang.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# not sure if requied
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
